--- a/GoSwitch.CustomerTools/bin/GoSwitch.CustomerTools.DB.dll.config
+++ b/GoSwitch.CustomerTools/bin/GoSwitch.CustomerTools.DB.dll.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     
-  <add name="GoSwitchProductionNewEntities" connectionString="metadata=res://*/GoSwitchEntities.csdl|res://*/GoSwitchEntities.ssdl|res://*/GoSwitchEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=GoSwitchProductionNew;user id=GoSwitch;password=f$6dB;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="GoSwitchProductionNewEntities" connectionString="metadata=res://*/GoSwitchEntities.csdl|res://*/GoSwitchEntities.ssdl|res://*/GoSwitchEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=GoSwitchProdNew;user id=GoSwitch;password=f$6dB;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
