--- a/GoSwitch.CustomerTools.Admin/Web.config
+++ b/GoSwitch.CustomerTools.Admin/Web.config
@@ -11,8 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-GoSwitch.CustomerTools.Admin-20190103101340.mdf;Initial Catalog=aspnet-GoSwitch.CustomerTools.Admin-20190103101340;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.; Initial Catalog=GoSwitchProdNew;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="GoSwitchEntities" connectionString="metadata=res://*/GoSwitchDBModel.csdl|res://*/GoSwitchDBModel.ssdl|res://*/GoSwitchDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=GoSwitchProdNew;persist security info=True;user id=GoSwitch;password=f$6dB;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
