--- a/GoSwitch.CustomerTools.Common/GoSwitch.CustomerTools.Common.csproj
+++ b/GoSwitch.CustomerTools.Common/GoSwitch.CustomerTools.Common.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
+    <Compile Include="Enums.cs" />
+    <Compile Include="Mails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SiteSettings.cs" />
   </ItemGroup>
